{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 62,
  "lineage": "c048f179-30ed-036f-f8a5-348ea5b0df1f",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0652b8b0e23c153ce",
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:elastic-ip/eipalloc-0652b8b0e23c153ce",
            "domain": "vpc",
            "id": "eipalloc-0652b8b0e23c153ce",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-229-190-201.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.190.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:internet-gateway/igw-0a88af32c87023389",
            "id": "igw-0a88af32c87023389",
            "owner_id": "448049825151",
            "tags": {
              "Name": "Internship Graduation IGW"
            },
            "tags_all": {
              "Name": "Internship Graduation IGW"
            },
            "vpc_id": "vpc-09fc17f10786f834a"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0652b8b0e23c153ce",
            "association_id": "eipassoc-0523701893c138707",
            "connectivity_type": "public",
            "id": "nat-0ebe3f2c70d17d87e",
            "network_interface_id": "eni-06cb96aec9a56e970",
            "private_ip": "10.10.1.167",
            "public_ip": "13.229.190.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb67593dbaf0a08e"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_subnet.public_subnet_01",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:route-table/rtb-0dcf22fc275f4d4b5",
            "id": "rtb-0dcf22fc275f4d4b5",
            "owner_id": "448049825151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ebe3f2c70d17d87e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internship Graduation Private Route Table"
            },
            "tags_all": {
              "Name": "Internship Graduation Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fc17f10786f834a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public_subnet_01",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:route-table/rtb-09f50d3b1768c7abb",
            "id": "rtb-09f50d3b1768c7abb",
            "owner_id": "448049825151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a88af32c87023389",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internship Graduation Public Route Table"
            },
            "tags_all": {
              "Name": "Internship Graduation Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fc17f10786f834a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_01",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a64c880089f1d893",
            "route_table_id": "rtb-0dcf22fc275f4d4b5",
            "subnet_id": "subnet-0121635144fdf6492"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.private_subnet_01",
            "module.network.aws_subnet.public_subnet_01",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_02",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6df120b814b7c0",
            "route_table_id": "rtb-0dcf22fc275f4d4b5",
            "subnet_id": "subnet-0c51310ae92877873"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.private_subnet_02",
            "module.network.aws_subnet.public_subnet_01",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_01",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0832c202dbd6c9a3b",
            "route_table_id": "rtb-09f50d3b1768c7abb",
            "subnet_id": "subnet-0eb67593dbaf0a08e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_subnet.public_subnet_01",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_02",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6f2476b6c0d7289",
            "route_table_id": "rtb-09f50d3b1768c7abb",
            "subnet_id": "subnet-0a743b1893f2134a8"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_subnet.public_subnet_02",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:subnet/subnet-0121635144fdf6492",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0121635144fdf6492",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448049825151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Internship Graduation Private Subnet 01"
            },
            "tags_all": {
              "Name": "Internship Graduation Private Subnet 01"
            },
            "vpc_id": "vpc-09fc17f10786f834a"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_02",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:subnet/subnet-0c51310ae92877873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c51310ae92877873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448049825151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Internship Graduation Private Subnet 02"
            },
            "tags_all": {
              "Name": "Internship Graduation Private Subnet 02"
            },
            "vpc_id": "vpc-09fc17f10786f834a"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:subnet/subnet-0eb67593dbaf0a08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb67593dbaf0a08e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448049825151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Internship Graduation Public Subnet 01"
            },
            "tags_all": {
              "Name": "Internship Graduation Public Subnet 01"
            },
            "vpc_id": "vpc-09fc17f10786f834a"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:subnet/subnet-0a743b1893f2134a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a743b1893f2134a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448049825151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Internship Graduation Public Subnet 02"
            },
            "tags_all": {
              "Name": "Internship Graduation Public Subnet 02"
            },
            "vpc_id": "vpc-09fc17f10786f834a"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448049825151:vpc/vpc-09fc17f10786f834a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-000ea1826be29570a",
            "default_route_table_id": "rtb-0f5402384d18909f7",
            "default_security_group_id": "sg-0b3eced05bd2ac023",
            "dhcp_options_id": "dopt-00bb2655f84b51c8b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09fc17f10786f834a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5402384d18909f7",
            "owner_id": "448049825151",
            "tags": {
              "Name": "Internship Graduation VPC"
            },
            "tags_all": {
              "Name": "Internship Graduation VPC"
            }
          }
        }
      ]
    }
  ]
}